option('force_32_bit', type : 'boolean', value : false, description : '-m32')
option('enable_pedantic_error', type : 'boolean', value : false, description : '-Wpedantic')
option('enable_werror', type : 'boolean', value : false, description : '-Werror')
option('compiler_rt_exclude_atomic_builtins', type : 'boolean', value : true, description : 'exclude atomic builtins')